[package]
name = "cimengine-build-tools"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
geo = "0.28.0"
geojson = "0.24.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml_edit = "0.22.12"
wax = "0.6.0"

[[bin]]
name = "cimengine"
path = "src/main.rs"
