[package]
name = "cimengine"
version = "2.0.0"
edition = "2021"

authors = ["artegoser"]
license = "MIT"
description = "Country info map engine build tools"
repository = "https://github.com/CIMEngine/cimengine"
readme = "./README.md"
keywords = ["geo", "geospatial", "build", "tools", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
geo = "0.28.0"
geojson = { version = "0.24.1", features = ["geo-types"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.12"
toml_edit = "0.22.12"
wax = "0.6.0"

xxhash-rust = { version = "0.8.10", features = ["xxh3"] }

[[bin]]
name = "cimengine"
path = "src/main.rs"
